# gaijin-2024-08-07

./: .gitignore  LICENSE  README.md
client/: CMakeLists.txt  Makefile  README.md
client/src/: connection.cpp  connection.hpp  main.cpp  resources.cpp  resources.hpp  utils.cpp  utils.hpp
server/: CMakeLists.txt  Makefile  README.md
server/src/: connection.cpp  connection.hpp  database.cpp  database.hpp  main.cpp  resources.cpp  resources.hpp  statistics.cpp  statistics.hpp  utils.cpp  utils.hpp
